5.26 benchmarks backport ()
Co-authored-by: Abdullah Farrukh <abdullah.farrukh@neo4j.com>
Co-authored-by: eebus <simpan.svensson@gmail.com>
Co-authored-by: Simon Priisalu <simon.svensson@neotechnology.com>
Co-authored-by: MishaDemianenko <12656787+MishaDemianenko@users.noreply.github.com>
Co-authored-by: Jarosław Pałka <jaroslaw.palka@neotechnology.com>
Co-authored-by: Michał Jonko <michal.jonko@neotechnology.com>